
package model;

/**
 *
 * @author jhnf
 */
public class Accessory extends Product {

    public Accessory(String id, String nombre, double price) {
        super(id, nombre, price);
    }
    
}
