
package model;

/**
 *
 * @author jhnf
 */
public class SealedProduct extends Product {

    public SealedProduct(String id, String nombre, double price) {
        super(id, nombre, price);
    }
    
}
